--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -15,8 +15,8 @@
                     </figure>
                 </div>
                 <div class="wrapper indent-bot2">
-                    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/consulta5.jpg" alt="Juguete 1" title="Juguete 1"/>
-                        <span class="afterBeforeText">XXXX</span>
+                    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/consulta5.jpg" alt="Gabinete número 1" title="Gabinete número 1"/>
+                        <span class="afterBeforeText">Gabinete número 1</span>
                     </figure>
                 </div>
             </div>
@@ -24,12 +24,14 @@
         <div class="grid_13 suffix_1 omega">
             <h2 class="p3">Conoce nuestras instalaciones</h2>
             <h5 class="indent-bot">Nuestro instalaciones han sido totalmente remodeladas</h5>
-            <p class="indent-bot2">Nuestra vocación es ofrecer un excelente servicio y atención a nuestros pacientes para que queden totalmente satisfechos. Por ello, nos renovamos día a día intentando superarnos en nuestros logros; renovando la imágen de nuestra clínica que le invitamos a conocer.</p>
-            <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque laoreet risus sit amet sapien sodales gravida nec et nisi. Vestibulum nec eleifend purus. Suspendisse bibendum mi ut augue scelerisque at laoreet mauris semper. Nullam nulla lectus, lobortis dignissim auctor in, imperdiet in mauris. Praesent facilisis venenatis diam, non fermentum elit condimentum non. Sed sodales sapien et purus ultrices placerat. Sed tempus tortor ut risus tincidunt blandit sit amet nec felis. Nam scelerisque placerat velit, sit amet lobortis ligula iaculis sit amet.
+            La clínica esta dotada de 3 gabinetes completos totalmente informatizados con pantallas de televisión y ordenadores que intercomunican cada gabinete entre si y con los demás departamentos de la clínica.
             </p>
             <p>
-            Donec convallis, nisl ac porttitor lobortis, libero libero interdum ipsum, nec tincidunt nulla est sit amet lacus. Proin mollis, lorem eget sodales accumsan, nisl lorem tempus magna, pretium suscipit nunc tortor at dolor. Nulla consequat luctus magna ac tincidunt. Aenean turpis nibh, euismod sed condimentum ut, elementum ut mi. Donec varius tellus non diam tincidunt commodo gravida mi auctor. Aliquam tincidunt lacinia arcu, sit amet condimentum lacus vehicula eu. Pellentesque vitae suscipit est. Integer pharetra, elit eget venenatis vestibulum, augue justo accumsan lectus, sit amet cursus nisl dui id eros. Vestibulum elit orci, semper eget facilisis a, pellentesque eget enim. Vivamus auctor malesuada auctor.
+            Cada uno de nuestros gabinetes, así como nuestras salas de rayos y de esterilización, se encuentran completamente equipados para poder ofrecer el máximo nivel de calidad y seguridad en todos nuestros tratamientos.
+            </p>
+            <p>La sala de radiología digital esta completamente aislada e informatizada para la realización de panorex y telerradiografías. Radiología digital intraoral en todos los gabinetes. La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de  radiación que reciben nuestros pacientes.</p>
+            <p>Una sala de esterilización y limpieza del instrumental, junto con una zona de preparación de modelos de escayola (recortadora de modelos).
+            Un despacho para la atención personal con el paciente, la recepción y la sala de espera muy confortable con pantalla de televisión y videos informativos, infantiles  y de recreo completan y amenizan su estancia en la clínica.
             </p>
         </div>
     </div>
