--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -44,7 +44,7 @@
                         <span class="afterBeforeText">C.V. Interactivo</span>
                     </figure>
                 </div>
-                <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque laoreet risus sit amet sapien sodales gravida nec et nisi. Vestibulum nec eleifend purus. Suspendisse bibendum mi ut augue scelerisque at laoreet mauris semper.</blockquote>
+                <blockquote>Durante todos estos años de experiencia profesional he continuado mi formación con múltiples participaciones y asistencia en cursos y congresos de odontología general y estética, endodoncias, prótesis, odontopediatría, ATM, ortodoncia, periodoncia, implantes, y un largo etc..., hasta hoy día para poder estar actualizada en los mas modernos avances y tecnologías.</blockquote>
                 <div class="sign p7">Patrocinio Gomez Martinez</div>
             </div>
         </div>
@@ -54,16 +54,15 @@
             <ul class="curriculum">
                 <li>Licenciada por la Universidad de Sevilla en Medicina y Cirugía General, en el año 1980 ( promoción 1974 - 1980 ).</li>
                 <li>Especialista en Estomatología por la Escuela de Estomatología de la Universidad de Sevilla en 1992: promoción 1980 - 1982. </li>
-                <li>Participación como congresista activo en las I Jornadas Andaluzas de Odontoestomatología, por el Dr. Gómez de la Mata y el Dr. Alvaro García Perla ( 1981).</li>
-                <li>Curso de endodoncia con el profesor D. Ángel Lasala ( 1982).</li>
-                <li>Curso teórico practico sobre articuladores semiajustables ( 1987).</li>
-                <li>Curso anual de Ortodoncia teórico práctico de las clases I, II, III de Angle por el profesor Cervera    ( 1990).</li>
-                <li>Curso anual I sobre terapéutica bioprogresiva en el centro internacional de estudios y clínica de ortodoncia dependiente de la Universidad de Nantes, Francia, dada por el profesor Dr. Duchateaux   ( 1992)superando el examen de aptitud realizado al final del curso.</li>
-                <li>Curso anual II sobre terapéutica bioprogresiva en el centro internacional de estudios y clínica de ortodoncia dependiente de la Universidad de Nantes, Francia, dada por el profesor Dr. Duchateaux   ( 1993 - 1994). Superando el examen de aptitud realizado al final del curso.</li>
-                <li>Certificado del Ministerio de Sanidad y Consumo que acredita estar habilitado como medico de medicina general en el sistema nacional de Salud Español, así como en los Sistemas Públicos de Seguridad Social de los demás Estados miembros de las Comunidades Europeas. (1994)</li>
-
+                <li>Curso teórico práctico sobre implantes osteointegrados, por los profesores Dr. Luengo y Dr. Santiago ( 1990).</li>
+                <li>Curso de Formación avanzada del Paciente Periodontal por el Dr. José Javier Echevarría  (1991)</li>
+                <li>Curso anual I sobre terapéutica bioprogresiva en el centro internacional de estudios y clínica de ortodoncia dependiente de la Universidad de Nantes, Francia, dada por el profesor Dr. Duchateaux (1992) superando el examen de aptitud realizado al final del curso</li>
+                <li>Curso anual II sobre terapéutica bioprogresiva en el centro internacional de estudios y clínica de ortodoncia dependiente de la Universidad de Nantes, Francia, dada por el profesor Dr. Duchateaux (1993 - 1994). Superando el examen de aptitud realizado al final del curso.</li>
+                <li>Curso anual III sobre terapéutica bioprogresiva en el centro internacional de estudios y clínica de ortodoncia dependiente de la Universidad de Nantes, Francia, dada por el profesos Duchateaux (1994 - 1995). Superando el examen de aptitud realizado al final del curso</li>
+                <li>DIPLÔME D´UNIVERSITÉ EN ORTHODONTIE por la Universidad de Nantes acreditativo de haber superado los tres cursos anteriores.</li>
+                <li>VIII Curso de Formación en Periodóncia e Implantología Clínica. Dr. Rafael Malpartida - Sevilla-oct 2005</li>
             </ul>
-            <a href="{{ STATIC_URL }}files/curriculum_vitae.pdf">Ver curriculum completo</a>
+            <a href="{{ STATIC_URL }}files/curriculum_vitae.pdf" target="_blank">Ver curriculum completo</a>
         </div>
     </div>
 {% endblock %}
