--- a/v2/patrodent/templates/radiologia.html
+++ b/v2/patrodent/templates/radiologia.html
@@ -12,11 +12,13 @@
    <p>
         La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.
     </p>
+   <p>
+        Actualmente estamos realizando el diagnóstico para implantes con radioloǵia 3D (en tres dimensiones), tecnología de última generación en la Tomografía Volumétrica Digital de haz cónico (CBCT – Cone Beam Computed Tomography), una modalidad de alto valor diagnóstico que ofrece representaciones tridimensionales precisas y de alta calidad de los elementos óseos en el complejo maxilofacial, dando comienzo así a una nueva dimensión del radiodiagnóstico.
+    </p>
 {% endblock %}
 
 {% block before-after-title %}
-    <h3 class="margin-bot">XXX</h3>
-    <p>XXX</p>
+    <h3 class="margin-bot">Imágenes de radiología</h3>
 {% endblock %}
 
 {% block before-after %}
